--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ dependencies {
 	//for https://github.com/akkinoc/yaml-resource-bundle
 	implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'
 
+	//for  JWT
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 
 	// for querydsl
 	implementation 'com.querydsl:querydsl-jpa'
